# Earthquake-Data-Analysis

./: Earthquake Modelling  README.md  pyhton system and signals github.py  pyhton system and signals ver 3.py
Earthquake_Data Python/: pyproject.toml
Earthquake_Data Python/src/: pyhton system and signals ver 3.py
Earthquake_Data Python/src/earthquake_data_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
